# pyMOTO

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: commit_test.yaml  new_release.yaml  publish-conda.yaml  publish-pypi.yaml  publish.yaml  pypi-release.yaml
docs/: conf.py  examples.rst  howto.md  index.rst  modules.rst  requirements.txt  theory.md
docs/_static/: sphinx_gallery_custom.css
docs/developer/: sphinx_documentation.md
examples/: README.rst  ex_autodiff.py  ex_compliance.py  ex_compliance_minimal.py  ex_compliance_robust.py  ex_eigenfrequency.py  ex_einsum_matrixprojection.py  ex_einsum_matrixvector.py  ex_module_dot_product.py  ex_module_simple.py  ex_module_with_init.py  ex_module_with_two_outputs.py  ex_network_simple.py  ex_network_simple_mathexpression.py  ex_network_simple_mathgeneral.py  ex_simple_module.py  example1.py  example2.py  example3.py
examples/topology_optimization/: README.rst  ex_compliance.ipynb  ex_compliance.py  ex_compliance_69line.py  ex_compliance_99line.py  ex_compliance_minimal.py  ex_compliance_multigrid.py  ex_compliance_overhang.py  ex_compliance_padding_filter.py  ex_compliance_prescribed_displacements.py  ex_compliance_robust.py  ex_compliance_robust_full.py  ex_compliant_mechanism.py  ex_compliant_mechanism_condensation.py  ex_compliant_mechanism_kinetostatic.py  ex_compliant_mechanism_prescribed_displacements.py  ex_compliant_mechanism_springs.py  ex_dynamic_compliance.py  ex_eigenfrequency.py  ex_flexure.py  ex_harmonic_base_excitation.py  ex_self_weight.py  ex_self_weight_stress.py  ex_showcase_compliance.py  ex_showcase_thermal.py  ex_thermo_mech.py  ex_transient_thermal.py  ex_transient_thermal_compliance.py  ex_volume_compliance.py  ex_volume_stress.py  modules.py
examples/topology_optimization/compliant_mechanisms/: ex_compliant_mechanism.py  ex_compliant_mechanism_kinetostatic.py  ex_compliant_mechanism_prescribed_displacements.py  ex_compliant_mechanism_springs.py  ex_flexure.py
examples/topology_optimization/static_compliance/: ex_compliance.py  ex_compliance_minimal.py  ex_compliance_prescribed_displacements.py  ex_compliance_robust.py
examples/topology_optimization/utils/: oc.py  scaling.py
pyModular/: __init__.py  block_library.py  core_objects.py  dyadcarrier.py  routines.py  utils.py
pyModular/modules/: assembly.py  filter.py  generic.py  io.py  linalg.py
pyModular/tests/: test_core.py  test_dyadcarrier.py  test_mathgeneral.py
pymodular/: core_objects.py  dyadcarrier.py  routines.py
pymodular/common/: __init__.py  domain.py  solvers.py  solvers_dense.py  solvers_sparse.py
pymodular/modules/: __init__.py  assembly.py  complex.py  filter.py  generic.py  io.py  linalg.py
pymodular/tests/: bench_many_modules.py  test_complex.py  test_core.py  test_dyadcarrier.py  test_einsum.py  test_linearsolve.py  test_mathgeneral.py  test_module_eigensolve.py  test_module_mathgeneral.py  test_solvers_dense.py  test_solvers_sparse.py
pymoto/: __init__.py  core_objects.py  routines.py  utils.py
pymoto/common/: __init__.py  domain.py  dyadcarrier.py  mma.py  optimizers.py  solvers.py  solvers_dense.py  solvers_sparse.py
pymoto/modules/: __init__.py  aggregation.py  assembly.py  autodiff.py  complex.py  filter.py  generic.py  io.py  linalg.py  scaling.py  transient.py
pymoto/solvers/: __init__.py  auto_determine.py  dense.py  iterative.py  matrix_checks.py  solvers.py  sparse.py
pymoto/tests/: bench_many_modules.py  test_module_eigensolve.py  test_module_mathgeneral.py  test_solvers_dense.py  test_solvers_sparse.py
tests/: bench_assembly.py  bench_linear_solver.py  bench_many_modules.py  requirements.txt  test_addmatrix.py  test_aggregration.py  test_assembly.py  test_automod.py  test_complex.py  test_core.py  test_core_module.py  test_core_network.py  test_core_signal.py  test_domain.py  test_dyadcarrier.py  test_dyadicmatrix.py  test_element_operations.py  test_elmatrices.py  test_filter.py  test_linsolve_sparse.py  test_module_concatenate.py  test_module_concatsignal.py  test_module_eigensolve.py  test_module_einsum.py  test_module_mathgeneral.py  test_module_setvalue.py  test_optimizers.py  test_scaling.py  test_solvers_dense.py  test_solvers_iterative.py  test_solvers_multigrid.py  test_solvers_sparse.py  test_static_condenstation.py  test_thermmech.py  test_thermo_mech.py
