[build-system]
requires = ["hatchling", "hatch-conda-build"]
build-backend = "hatchling.build"

[project]
name = "pyMOTO"
dynamic = ["version"]
description = "A modular approach to topology optimization"
authors = [
    { name = "Arnoud Delissen", email = "arnouddelissen+pymoto@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8" 
dependencies = [
    "numpy",
    "scipy>=1.7",
    "sympy",
    "matplotlib",
]

# license = "MIT"
# license-files = ["LICENSE"]
license = {text = "MIT"}

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

keywords = [
    "topology optimization",
    "generative design",
    "sensitivity analysis",
    "gradients",
    "finite element method",
    "structural optimization",
    "mechanics",
    "engineering",
]

[project.urls]
Homepage = "https://pymoto.readthedocs.io/"
Code = "https://github.com/aatmdelissen/pyMOTO"
Documentation = "https://pymoto.readthedocs.io/"
Issues = "https://github.com/aatmdelissen/pyMOTO/issues"
"Release notes" = "https://github.com/aatmdelissen/pyMOTO/releases/latest"

[project.optional-dependencies]
fast = [
    "mkl",
    "opt-einsum",
]

ext = [
    "cvxopt",
    "scikit-sparse",
    "mkl",
    "opt-einsum",
    "jax[cpu]",    
    "autograd[scipy]",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pre-commit"
]

## ----- Setuptools Configuration -----
[tool.hatch.build.targets.sdist]
include = ["pymoto/*"]

[tool.hatch.version]
path = "pymoto/__init__.py"

## ----- Conda Configuration -----
[tool.hatch.build.targets.conda]
channels = ['aatmdelissen']

## ----- Ruff Configuration -----
[tool.ruff]
extend-exclude = [ "docs/**"]
lint.select = ["E", "F"]
lint.fixable = ["A", "B", "C", "D", "E", "F"]   # Fix all if possible
line-length = 120
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"  # Allow unused variables when underscore-prefixed.

[tool.ruff.format]
exclude = ["tests/**", "examples/**"]