[metadata]
name = pymoto
version = attr: pymoto.__version__
author = Arnoud Delissen
author_email = arnouddelissen+pymoto@gmail.com
url = https://github.com/aatmdelissen/pymoto
description = A modular approach for topology optimization
long_description = file: README.md
long_description_content_type = text/markdown
keywords = topology optimization, generative design, structural, sensitivities, derivatives, framework, modular, blocks, pipeline
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering

[options]
packages = find:
include_package_data = True
zip_safe = True
install_requires =
    numpy
    scipy>=1.7
    sympy
    matplotlib

[options.package_data]
pymoto =
    *.py
    common/*.py
    modules/*.py

[options.extras_require]
dev =
    flake8
    pytest
    cvxopt
    scikit-sparse
    pypardiso
    jax[cpu]

[dist_conda]
noarch = True